[project]
name = "assertive-mock-api-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "assertive>=1.2.0",
    "clean-ioc>=1.15.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
